jQuery To-do list Circles

--- a/todoList/assets/css/style.css
+++ b/todoList/assets/css/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background: #2BC0E4;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2BC0E4, #EAECC6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2BC0E4, #EAECC6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 #container {
     margin: 100px auto 100px;
@@ -16,18 +19,56 @@ h1 {
     color: #fff;
     background: #2980b9;
 }
+.fa-plus {
+    float: right;
+    cursor: pointer;
+}
+input {
+    box-sizing: border-box;
+    padding: 13px 13px 13px 20px;
+    border: 3px solid rgba(0,0,0,0);
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: #2980b9;
+    background: #f7f7f7;
+}
+input:focus {
+    background: #fff;
+    border: 3px solid #2980b9;
+    outline: none;
+}
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 li {
+    min-height: 40px;
+    line-height: 40px;
+    color: #666;
     background: #fff;
 }
 li:nth-child(2n) {
-
+    background: #f7f7f7;
 }
 .completed {
     color: gray;
     text-decoration: line-through;
+}
+span {
+    display: inline-block;
+    margin-right: 20px;
+    width: 0;
+    height: 40px;
+    text-align: center;
+    color: #fff;
+    background: #e74c3c;
+    opacity: 0;
+    transition: .2s linear;
+    cursor: pointer;
+}
+li:hover span {
+    width: 40px;
+    opacity: 1;
 }
